<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/lmcimg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="170.0dip" android:layout_marginBottom="10.0dip" android:src="@drawable/lmc54px" />
    <TextView android:textStyle="bold" android:id="@id/lmc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hsl_a_a" android:textAlignment="center" />
    <TextView android:id="@id/sgcam" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hsl_a_b" />
    <TextView android:id="@id/agc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hsl_a_c" />
</LinearLayout>