<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/options_menu_top_bar" android:layout_width="fill_parent" android:layout_height="@dimen/options_menu_top_bar_size" android:layout_alignParentTop="true">
        <FrameLayout android:layout_gravity="center" android:id="@id/minibar_container" android:paddingLeft="@dimen/options_icon_side_padding" android:paddingRight="@dimen/options_icon_side_padding" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <include layout="@layout/minibar" />
        </FrameLayout>
        <FrameLayout android:layout_gravity="center" android:id="@id/options_menu_closed" android:paddingLeft="@dimen/options_icon_side_padding" android:paddingTop="@dimen/options_icon_vertical_padding" android:paddingRight="@dimen/options_icon_side_padding" android:paddingBottom="@dimen/options_icon_vertical_padding" android:layout_width="wrap_content" android:layout_height="@dimen/options_menu_top_bar_size" android:contentDescription="@string/options_menu_button_desc">
            <ImageView android:id="@id/options_menu_closed_background" android:background="@drawable/options_icon_background_legacy" android:clickable="false" android:layout_width="@dimen/options_icon_tap_width" android:layout_height="fill_parent" />
            <ImageButton android:layout_gravity="center" android:id="@id/options_menu_closed_icon" android:background="@null" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:clickable="false" android:layout_width="48.0dip" android:layout_height="@dimen/options_menu_closed_icon_height" android:src="@drawable/options_menu_arrow_icon" android:importantForAccessibility="no" />
            <ImageView android:id="@id/options_menu_capturing_background" android:background="@drawable/options_icon_background_legacy" android:visibility="gone" android:clickable="false" android:layout_width="@dimen/options_capturing_width" android:layout_height="fill_parent" />
            <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="fill_parent">
                <ImageButton android:layout_gravity="center" android:id="@id/retouching_indicator" android:background="@null" android:visibility="gone" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="6.0dip" android:layout_marginEnd="6.0dip" />
                <ImageButton android:layout_gravity="center" android:id="@id/motion_photo_animator" android:background="@null" android:visibility="gone" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_motion_recording" android:layout_marginStart="6.0dip" android:layout_marginEnd="6.0dip" />
            </LinearLayout>
        </FrameLayout>
        <LinearLayout android:layout_gravity="center|right" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="18.0dip">
            <MC.UI.OpenButtonListLeft android:id="@id/OpenButtonListLeft" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="fitCenter" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:layout_gravity="center|right|top" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.5dip" android:layout_alignParentRight="true" android:layoutDirection="rtl">
        <MC.UI.Button.Aperture android:id="@id/buttonaperture" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:layout_marginTop="60.0dip" android:layout_alignParentBottom="true" />
        <MC.UI.Button.OIS android:id="@id/buttonois" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:layout_marginTop="60.0dip" android:layout_below="@id/buttonaperture" android:layout_alignParentBottom="true" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layoutDirection="rtl">
        <MC.UI.OpenButtonListRight android:gravity="bottom|center|right" android:layout_gravity="bottom|center|right" android:id="@id/OpenButtonListRight" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="60.0dip" android:layout_marginBottom="15.0dip" android:layout_alignParentRight="true" android:animateLayoutChanges="true" />
    </LinearLayout>
    <FrameLayout android:id="@id/aux_butt_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentRight="true">
        <com.mdmitriev.auxlenses.AuxButtonsLayout android:theme="@style/CameraX" android:gravity="bottom|center|right" android:layout_gravity="bottom|center|right" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="0.5dip" android:backgroundTint="@null">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.5dip">
                <LinearLayout android:orientation="vertical" android:background="@drawable/rectang" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <Button android:theme="@style/CameraX" android:textSize="10.0sp" android:textColor="#ffffffff" android:id="@id/AuxButtonInfinity" android:background="@drawable/main_button" android:visibility="gone" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:layout_marginBottom="3.0dip" android:text="aux3" android:layout_above="@id/AuxButtonTele" android:layout_alignParentRight="true" android:layout_centerInParent="true" android:textAllCaps="?android:windowOverscan" android:textAlignment="center" android:backgroundTint="@null" android:paddingHorizontal="0.0dip" android:paddingVertical="0.0dip" />
                    <Button android:theme="@style/CameraX" android:textSize="10.0sp" android:textColor="#ffffffff" android:id="@id/AuxButtonTele" android:background="@drawable/main_button" android:visibility="gone" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:layout_marginBottom="3.0dip" android:text="2x" android:layout_above="@id/AuxButtonMain" android:layout_alignParentRight="true" android:layout_centerInParent="true" android:textAllCaps="?android:windowOverscan" android:textAlignment="center" android:backgroundTint="@null" android:paddingHorizontal="0.0dip" android:paddingVertical="0.0dip" />
                    <Button android:theme="@style/CameraX" android:textSize="10.0sp" android:textColor="#ffffffff" android:id="@id/AuxButtonMain" android:background="@drawable/main_button" android:visibility="gone" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:layout_alignParentRight="true" android:layout_centerInParent="true" android:textAllCaps="?android:windowOverscan" android:textAlignment="center" android:layout_alignParentEnd="false" android:backgroundTint="@null" android:paddingHorizontal="0.0dip" android:paddingVertical="0.0dip" />
                    <Button android:theme="@style/CameraX" android:textSize="10.0sp" android:textColor="#ffffffff" android:id="@id/AuxButtonWide" android:background="@drawable/main_button" android:visibility="gone" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:layout_marginTop="3.0dip" android:text="0.6x" android:layout_below="@id/AuxButtonMain" android:layout_alignParentRight="true" android:layout_centerInParent="true" android:textAllCaps="?android:windowOverscan" android:textAlignment="center" android:backgroundTint="@null" android:paddingHorizontal="0.0dip" android:paddingVertical="0.0dip" />
                    <Button android:theme="@style/CameraX" android:textSize="10.0sp" android:textColor="#ffffffff" android:id="@id/AuxButton5" android:background="@drawable/main_button" android:visibility="gone" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:layout_marginTop="3.0dip" android:text="Macro" android:layout_below="@id/AuxButtonWide" android:layout_alignParentRight="true" android:layout_centerInParent="true" android:textAllCaps="?android:windowOverscan" android:textAlignment="center" android:backgroundTint="@null" android:paddingHorizontal="0.0dip" android:paddingVertical="0.0dip" />
                </LinearLayout>
            </LinearLayout>
        </com.mdmitriev.auxlenses.AuxButtonsLayout>
    </FrameLayout>
    <FrameLayout android:id="@id/aux_butt_horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentRight="true">
        <com.mdmitriev.auxlenses.AuxButtonsLayout android:theme="@style/CameraX" android:gravity="bottom|center" android:layout_gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="15.5dip" android:backgroundTint="@null">
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <LinearLayout android:orientation="horizontal" android:background="@drawable/rectang" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <Button android:theme="@style/CameraX" android:textSize="10.0sp" android:textColor="#ffffffff" android:id="@id/AuxButton5" android:background="@drawable/main_button" android:visibility="gone" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:text="aux3" android:layout_above="@id/AuxButtonWide" android:textAllCaps="?android:windowOverscan" android:textAlignment="center" android:backgroundTint="@null" android:paddingHorizontal="0.0dip" android:paddingVertical="0.0dip" />
                    <Button android:theme="@style/CameraX" android:textSize="10.0sp" android:textColor="#ffffffff" android:id="@id/AuxButtonWide" android:background="@drawable/main_button" android:visibility="gone" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:text="2x" android:layout_above="@id/AuxButtonMain" android:textAllCaps="?android:windowOverscan" android:textAlignment="center" android:backgroundTint="@null" android:paddingHorizontal="0.0dip" android:paddingVertical="0.0dip" />
                    <Button android:theme="@style/CameraX" android:textSize="10.0sp" android:textColor="#ffffffff" android:id="@id/AuxButtonMain" android:background="@drawable/main_button" android:visibility="gone" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:layout_centerInParent="true" android:textAllCaps="?android:windowOverscan" android:textAlignment="center" android:backgroundTint="@null" android:paddingHorizontal="0.0dip" android:paddingVertical="0.0dip" />
                    <Button android:theme="@style/CameraX" android:textSize="10.0sp" android:textColor="#ffffffff" android:id="@id/AuxButtonTele" android:background="@drawable/main_button" android:visibility="gone" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:text="0.6x" android:layout_below="@id/AuxButtonMain" android:textAllCaps="?android:windowOverscan" android:textAlignment="center" android:backgroundTint="@null" android:paddingHorizontal="0.0dip" android:paddingVertical="0.0dip" />
                    <Button android:theme="@style/CameraX" android:textSize="10.0sp" android:textColor="#ffffffff" android:id="@id/AuxButtonInfinity" android:background="@drawable/main_button" android:visibility="gone" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:text="Macro" android:layout_below="@id/AuxButtonTele" android:textAllCaps="?android:windowOverscan" android:textAlignment="center" android:backgroundTint="@null" android:paddingHorizontal="0.0dip" android:paddingVertical="0.0dip" />
                </LinearLayout>
            </LinearLayout>
        </com.mdmitriev.auxlenses.AuxButtonsLayout>
    </FrameLayout>
    <FrameLayout android:id="@id/toggle_oneshot" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.custom.OneShot android:theme="@style/CameraX" android:layout_gravity="bottom|center|left" android:id="@id/t_oneshot" android:background="@drawable/main_button" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:layout_marginLeft="10.0dip" android:layout_marginBottom="0.0dip" android:textOn="" android:textOff="" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
    </FrameLayout>
    <FrameLayout android:id="@id/toggle_astro" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.custom.Astro android:theme="@style/CameraX" android:layout_gravity="bottom|center|left" android:id="@id/t_astro" android:background="@drawable/main_button" android:layout_width="@dimen/aux_size" android:layout_height="@dimen/aux_size" android:layout_marginLeft="45.0dip" android:layout_marginBottom="0.0dip" android:textOn="" android:textOff="" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    </FrameLayout>
    <FrameLayout android:id="@id/slider_focus" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.mf.RotSeek android:textSize="12.0sp" android:textStyle="bold" android:layout_gravity="bottom|center|right" android:focusable="true" android:focusableInTouchMode="true" android:visibility="visible" android:clickable="true" android:layout_width="50.0dip" android:layout_height="350.0dip" android:layout_marginRight="110.0dip" android:layout_marginBottom="30.0dip" android:layout_alignParentStart="true" android:contextClickable="true" />
    </FrameLayout>
    <FrameLayout android:id="@id/slider_exposure" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <za.defcomk.prorec.cust.RotSeek android:textStyle="bold" android:layout_gravity="bottom|center|right" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="60.0dip" android:layout_height="140.0dip" android:layout_marginRight="16.5dip" android:layout_marginBottom="190.0dip" android:layout_alignParentBottom="true" android:layout_alignParentStart="true" android:contextClickable="true" />
    </FrameLayout>
    <FrameLayout android:id="@id/slider_iso" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <za.defcomk.prorec.cust2.RotSeek android:textStyle="bold" android:layout_gravity="bottom|center|right" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="60.0dip" android:layout_height="140.0dip" android:layout_marginRight="16.5dip" android:layout_marginBottom="290.0dip" android:layout_alignParentBottom="true" android:layout_alignParentStart="true" android:contextClickable="true" />
    </FrameLayout>
    <RelativeLayout android:id="@id/options_menu_middle_bar" android:layout_width="fill_parent" android:layout_height="@dimen/options_menu_top_bar_size" android:layout_below="@id/options_menu_top_bar" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="@dimen/overlap_with_top_bar" android:layout_below="@id/options_menu_top_bar" android:layout_alignParentBottom="true">
        <android.support.v7.widget.LinearLayoutCompat android:layout_gravity="center" android:orientation="vertical" android:id="@id/options_menu_view" android:background="@drawable/options_menu_background_legacy" android:focusable="true" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/options_side_padding" android:contentDescription="@string/options_menu_title" android:layoutDirection="locale">
            <com.google.android.apps.camera.optionsbar.view.OptionsMenuView android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb" android:id="@id/options_menu_view_internal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/options_menu_view_margin" android:layout_marginRight="@dimen/options_menu_view_margin" android:alpha="0.0" />
            <View android:id="@id/options_menu_separate_line" android:background="@color/options_menu_line_color" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/options_menu_line_height" android:layout_marginLeft="@dimen/options_setting_padding" android:layout_marginRight="@dimen/options_setting_padding" android:alpha="0.0" />
            <RelativeLayout android:id="@id/options_menu_setting_bar" android:paddingLeft="@dimen/options_setting_padding" android:paddingRight="@dimen/options_setting_padding" android:clickable="true" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="@dimen/options_menu_setting_height" android:alpha="0.0" />
            <android.support.v7.widget.AppCompatButton android:textAppearance="?textAppearanceSubhead2" android:textColor="?colorOnBackground" android:layout_gravity="end" android:id="@id/options_menu_standalone_settings" android:background="@drawable/standalone_settings_background" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/standalone_settings_top_margin" android:text="@string/more_settings" android:drawablePadding="8.0dip" android:contentDescription="@string/settings_open_desc" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
        </android.support.v7.widget.LinearLayoutCompat>
    </FrameLayout>
</merge>